--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.33.0",
     "eslint": "^8.47.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
